[package]
name = "rust-todo-app"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
warp = "0.3.6"
