[package]
name = "rust-todo-app"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
warp = "0.3.6"
